--- a/biscoito-da-sorte/style.css
+++ b/biscoito-da-sorte/style.css
@@ -15,7 +15,7 @@ body {
 
 /*screen1*/
 
-#screen1 {
+.screen1 {
     width: 300px;
     height: 312px;
     padding: 48px 64px 64px 64px;
@@ -27,7 +27,7 @@ body {
 }
 
 
-#screen1 h1{
+.screen1 h1{
     color: #34355B;
     font-size: 24px;
     font-weight: bold;
@@ -35,7 +35,7 @@ body {
     margin-bottom: 14px;
 }
 
-#screen1 p {
+.screen1 p {
     font-family: "DM Sans", sans-serif;
     color: #34355B;
     font-weight: normal;
@@ -51,7 +51,7 @@ body {
 
 /*screen2*/
 
-#screen2 {
+.screen2 {
     width: 428px;
     height: 564px;
     background-color: #FFFFFF;
@@ -66,7 +66,7 @@ body {
     align-items: center;
 }
 
-#screen2 h1{
+.screen2 h1{
     color: #34355B;
     font-size: 24px;
     font-weight: bold;
@@ -83,7 +83,7 @@ body {
 
 }
 
-#screen2 p {
+.screen2 p {
     font-family: "Dancing Script", cursive;
     font-size: 24px;
     font-weight: normal;
@@ -95,7 +95,7 @@ body {
     align-items: center;
     padding: 10px;
     gap: 10px;
-   margin-bottom: 60px;
+    margin-bottom: 60px;
 
     width: 293px;
     height: 107px;
